# gpu-waves-simulation

./: .gitignore  CMakeLists.txt  README.md  main.cu
include/: Scene.hpp  SimulationManager.cuh  Utils.h  complex.cuh  constants.hpp  fft.cuh
include/shapes/: HeightFieldGPU.cuh
shaders/: fragment_shader.glsl  vertex_shader.glsl
